2005-08-18  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py (DBIBase.endConnection): method equivalent to
	del self.conn.  Also removed autocommit -- the implementation in
	use only worked for sqlite -- and stopped referring to autocommit
	in internal dbi code, so it is no longer a performance hit and its
	accuracy is not critical.  Therefore, execute() no longer returns
	connections to the pool for autocommit -- hence the endConnection()
	method.   

	* src/pydo/drivers (all drivers): fiddled with autocommit to make
	the tests run.  The property is not functional except for sqlite
	and psycopg version 2.

	* doc/manual.rst: document DBIBase.endConnection().

2005-08-17  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py (DBIBase): adding initFunc parameter to
	base DBI class constructor and connect(); (_real_connect,
	initAlias): initFunc parameter to _real_connect and init parameter
	to initAlias. (initAlias): accept list or tuple of strings for
	init parameter, as well as string and callable.

	* src/pydo/drivers: (all concrete DBI classes): adding
	initFunc parameter to drivers.

	* src/pydo/dbi.py (_real_connect): preparation for on-connect
	custom initializers.

	* doc/manual.rst: document dbiObj.exceptions and
	dbiObj.dbapiModule. 

2005-08-16  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/: use new base class constructor for all
	drivers.

	* src/pydo/dbi.py (DBIBase.__init__): constructor now expects a
	direct reference to the dbapi module.
	(DBIBase._initExceptions): create a dictionary of standard dbapi
	exceptions. 

2005-08-12  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/operators.py (SQLOperator._repr_single): peculiar
	thinko.
	(__repr_single_isnull): fix for ISNULL and NOTNULL, which were
	broken. 

2005-08-08  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_dbi.py (test_pool2): test that pool gives different
	connections for different (active) threads.
