@@ -1,3 +1,12 @@
+2005-08-19  Jacob Smullyan  <smulloni@smullyan.org>
+	
+	* src/pydo/base.py (PyDO._processWhere): fix for updateSome bug --
+	when passing a sql string to processWhere with a converter, values
+	preexisting in the converter were ignored.
+
+	* tests/test_base.py (test_updateSome3): test for updateSome bug
+	found by Matthew Bogosian.
+
 2005-08-18  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* src/pydo/dbi.py (DBIBase.endConnection): method equivalent to
